--- a/my_portfolio/index.html
+++ b/my_portfolio/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/dheereshagrwal/colored-icons@1.7.5/src/app/ci.min.css"
+    />
     <title>Vite + React</title>
   </head>
   <body class="smooth-scroll">
