--- a/my_portfolio/index.html
+++ b/my_portfolio/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:site_name" content="My Portfolio" />
+    <meta property="og:title" content="Portfolio" />
+    <meta property="og:description" content="Full Stack Developer Portfolio" />
+    <meta property="og:image" content="https://ibb.co/3WncsF1" />
+    <meta property="og:type" content="website" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/AA_New.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
