Updated Font style

--- a/my_portfolio/index.html
+++ b/my_portfolio/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link
@@ -20,6 +20,11 @@
       href="https://cdn.jsdelivr.net/gh/dheereshagrwal/colored-icons@1.7.5/src/app/ci.min.css"
     />
     <title>My Portfolio</title>
+    <style>
+      html {
+        transition: background-color 0.5s ease, color 0.5s ease;
+      }
+    </style>
   </head>
   <body class="smooth-scroll">
     <div id="root"></div>
