Added new loading animation

--- a/my_portfolio/index.html
+++ b/my_portfolio/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/dheereshagrwal/colored-icons@1.7.5/src/app/ci.min.css"
     />
-    <title>My Portfolio</title>
+    <title>Adhishthan's Portfolio</title>
     <style>
       html {
         transition: background-color 0.5s ease, color 0.5s ease;
