Updated Meta Image

--- a/my_portfolio/index.html
+++ b/my_portfolio/index.html
@@ -5,7 +5,7 @@
     <meta property="og:site_name" content="My Portfolio" />
     <meta property="og:title" content="Portfolio" />
     <meta property="og:description" content="Full Stack Developer Portfolio" />
-    <meta property="og:image" content="https://iili.io/2YQXrcx.md.png" />
+    <meta property="og:image" content="https://iili.io/26cIrcG.md.png" />
     <meta property="og:type" content="website" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/AA_New.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
