--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta property="og:site_name" content="My Portfolio" />
     <meta property="og:title" content="Portfolio" />
     <meta property="og:description" content="Full Stack Developer Portfolio" />
-    <meta property="og:image" content="https://freeimage.host/i/3l3Qjmx" />
+    <meta property="og:image" content="https://iili.io/3l3Qjmx.png" />
     <meta property="og:type" content="website" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/AA_New.png" />
+    <link rel="icon" type="image/svg+xml" href="/AA_New.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
