--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta property="og:site_name" content="My Portfolio" />
-    <meta property="og:title" content="Portfolio" />
-    <meta property="og:description" content="Full Stack Developer Portfolio" />
+    <meta property="og:title" content="Adhishthan Ashok" />
+    <meta property="og:description" content="Software Engineer" />
     <meta property="og:image" content="https://iili.io/3l3Qjmx.png" />
     <meta property="og:type" content="website" />
     <link rel="icon" type="image/svg+xml" href="/AA_New.png" />
